--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "require": {
         "symfony/yaml": "~4.0",
-        "symfony/workflow": "^4.0"
+        "symfony/event-dispatcher": "~4.0"
     }
 }
