more libraries to the rescue ;-)

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,10 @@
 {
     "require": {
         "symfony/yaml": "~4.0",
-        "symfony/event-dispatcher": "~4.0"
+        "symfony/event-dispatcher": "~4.0",
+        "symfony/security-http": "~4.0",
+        "symfony/routing": "~4.0",
+        "symfony/dependency-injection": "~4.0",
+        "symfony/security-core": "~4.0"
     }
 }
