--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,8 @@
 {
     "require": {
         "symfony/yaml": "~4.0",
-        "symfony/event-dispatcher": "~4.0",
-        "symfony/security-http": "~4.0",
-        "symfony/routing": "~4.0",
-        "symfony/dependency-injection": "~4.0",
-        "symfony/security-core": "~4.0",
-        "psr/log": "^1.1"
+        "psr/log": "^1.1",
+        "ipl/sql": "dev-master",
+        "evenement/evenement": "^3.0 || ^2.0"
     }
 }
