--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
         "symfony/yaml": "~4.0",
         "psr/log": "^1.1",
         "ipl/sql": "dev-master",
-        "evenement/evenement": "^3.0 || ^2.0"
+        "evenement/evenement": "^3.0 || ^2.0",
+        "erusev/parsedown": "^1.7"
     }
 }
